<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Storyapp is an application that can be used to share stories with our beloved relatives. Let\'s share your story now! </string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Let\'s create an account by filling out the form below!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please insert your data</string>
    <string name="title_login_page">Let\'s login to your account now!</string>
    <string name="name">Name</string>
    <string name="copyright">© 2023 Melati Eka Putri</string>
    <string name="logout">Logout</string>
    <string name="email_validation_message">Please input the correct email address</string>
    <string name="password_validation_message">Your password is less than 8 character</string>
    <string name="email_empty">Insert Email</string>
    <string name="password_empty">Insert Password</string>
    <string name="name_empty">Insert Name</string>
    <string name="login_success">Login success! Welcome!</string>
    <string name="register_success">Account signup success!</string>
    <string name="register_failed_password">Account signup failed. Please input more than 8 character password!</string>
    <string name="register_failed_email">Account signup failed. Please use other email!</string>
    <string name="login_failed">Login failed because email and/or password not correct. Please try again!</string>
    <string name="createdAt">Created at</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Phone Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_story">Post This Story</string>
    <string name="Description">Description</string>
    <string name="permission_not_granted">Permission is not granted</string>
    <string name="choose_picture">Please choose a picture</string>
    <string name="no_picture">Please insert image first</string>
    <string name="upload_success">Story posted successfully!</string>
    <string name="upload_failed">Your story can\'t be upload. Let\'s try again!</string>
    <string name="description_hint">Please insert story description</string>
    <string name="item_photo_contDesc">Story Item Photo</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="signup_image">Signup Image</string>
    <string name="login_image">Login Image</string>
    <string name="detail_story_photo">Detail Story Photo</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera_icon">Switch Camera Icon</string>
    <string name="preview_image">Preview Image</string>
    <string name="settings">Change Language</string>
    <string name="connection_failed">Request failed to be executed. Please check the connection on your device</string>
    <string name="no_data">No data available to display</string>
    <string name="title_activity_maps">StoryApp</string>
    <string name="change_view">Change View</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location">Location</string>
    <string name="location_detail">Lat: %.3f, Lon: %.3f</string>
    <string name="location_not_found">Location not found</string>
    <string name="retry">Retry</string>
    <string name="add_my_location">Add My Location</string>
    <string name="no_permission">No location permission granted.</string>
    <string name="failed_capture">Image capture failed.</string>
    <string name="camera_failed">Camera open failed.</string>
    <string name="login_failed_password">Login failed. Please use account with more than 8 character password!</string>
</resources>