<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/settings"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/add_story"
        android:icon="@drawable/ic_baseline_add_a_photo_24"
        android:title="@string/add_story"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/change_view"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/change_view"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/normal_type"
        android:title="@string/normal_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/satellite_type"
        android:title="@string/satellite_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_type"
        android:title="@string/terrain_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_type"
        android:title="@string/hybrid_type"
        app:showAsAction="never" />
</menu>