<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/settings"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/add_story"
        android:icon="@drawable/ic_baseline_add_a_photo_24"
        android:title="@string/add_story"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/change_view"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/change_view"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:iconTint="@color/design_default_color_on_primary"
        app:showAsAction="collapseActionView|always" />
</menu>