<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail_story.DetailStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_detail_photo"
            android:transitionName="photo"
            android:layout_width="0dp"
            android:layout_height="480dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/detail_story_photo" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:transitionName="name"
            style="@style/TextContent.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="TextView"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_detail_createdAt_title"
            style="@style/TextContent.Small"
            android:layout_marginTop="16dp"
            android:text="@string/createdAt"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_detail_createdAt"
            style="@style/TextDetail.Field"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_createdAt_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="lorem_ipsum" />

        <TextView
            android:id="@+id/tv_detail_description_title"
            style="@style/TextContent.Small"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Description"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_createdAt"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_detail_description"
            style="@style/TextDetail.Field"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="lorem_ipsum" />

        <TextView
            android:id="@+id/tv_detail_location_title"
            style="@style/TextContent.Small"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_detail_location"
            style="@style/TextDetail.Field"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_location_title"
            tools:text="lorem_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>